# epoll_ipc_control

./: .gitignore  LICENSE  Makefile.am  Makefile.in  README.md  configure  configure.ac  makefile
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
inc/: GwTimer_utils.h  IpcCtrl.h  PreDefine.h  epolling.h
src/: GwTimer_utils.c  GwTimer_utils.cpp  IpcCtrl.c  IpcCtrl.cpp  Makefile.am  Makefile.in  client_main.c  epolling.c  epolling.cpp  example_main.c  main.c  makefile
